--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t rzkx90/react-test -f ./client/Dockerfile.Dev
+  - docker build -t rzkx90/react-test -f ./client/Dockerfile.Dev ./client
 
 script:
   - docker run -e CI=true rzkx90/react-test npm test
@@ -14,7 +14,7 @@ after_success:
   - docker build -t rzkx90/multi-nginx ./nginx
   - docker build -t rzkx90/multi-server ./server
   - docker build -t rzkx90/multi-worker ./worker
-  - echo "\$DOCKER_PASS" | docker login -u "\$DOCKER_ID" --password-stdin
+  - echo "$DOCKER_PASS" | docker login -u "$DOCKER_ID" --password-stdin
   - docker push rzkx90/multi-client
   - docker push rzkx90/multi-server
   - docker push rzk90/multi-nginx
